@@ -1,5 +1,5 @@
 /*   grep-dctrl - grep Debian control files
-     Copyright (C) 1999, 2004  Antti-Juhani Kaijanaho
+     Copyright © 1999, 2004  Antti-Juhani Kaijanaho
   
      This program is free software; you can redistribute it and/or modify
      it under the terms of the GNU General Public License as published by
