@@ -22,7 +22,7 @@
  * libdpkg - Debian packaging suite library routines
  * vercmp.c - comparison of version numbers
  *
- * Copyright (C) 1995 Ian Jackson <ian@chiark.greenend.org.uk>
+ * Copyright © 1995 Ian Jackson <ian@chiark.greenend.org.uk>
  *
  * This is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as
